--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 /coverage
 
 # production
-/build
 
 # misc
 .DS_Store
@@ -17,6 +16,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
+/server/.env
+
+workspace.code-workspace
 
 npm-debug.log*
 yarn-debug.log*
